--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -48,8 +48,9 @@
     }
 
     .copy_url{
-        width: 30px;
-        height: 30px;
+        width: 32px;
+        height: 32px;
+        margin: 0;
     }
 
 }
